# sail-backend

./: .gitignore  ConfigLib.opam  ConfigLib.opam.locked  Dockerfile  Makefile  README.md  auxlib.opam  auxlib.opam.locked  configlib.opam  default.nix  dune-project  flake.nix  monads.nix  monads.opam  monads.opam.locked  nanosail.nix  nanosail.opam  nanosail.opam.locked  nanosail_tests.opam  notes.org  notes.txt  process-rewrites.rb  remove-trailing-whitespace.rb  remove-trailing-whitespaces  rename-rewrites.rb  sail.opam.locked  sail_katamaran_backend.opam  sail_katamaran_backend.opam.locked  slang.opam  slang.opam.locked  supported.txt
auxlib/: auxlib.ml  dune  settings.ml  settings.mli
nanosail/: AnsiColor.ml  Ast.ml  Basics.ml  ComparisonNotations.ml  Configuration.ml  Configuration.mli  Document.ml  Document.mli  ExtendedInteger.ml  FExpr.ml  FExpr.mli  Html.ml  Id.ml  IdentifierMap.ml  IntegerMap.ml  LexingPositionUtil.ml  Logging.ml  Logging.mli  Nanosail.ml  Normalize.ml  Normalize.mli  PP.ml  PrecedenceFormatter.ml  Sail.ml  Simplify.ml  StringMap.ml  StringOf.ml  Substitute.ml  Templates.ml  Util.ml  ast.ml  configuration.ml  configuration.mli  dune  nanosail.ml  nyi.ml  sail_to_nanosail.ml  settings.ml  substitute.ml
nanosail/Ast/: Ast.ml  BinaryOperator.ml  Definition.ml  Expression.ml  ExtendedFunctionType.ml  ExtendedType.ml  Identifier.ml  Kind.ml  Nanotype.ml  Normalize.ml  Numeric.ml  NumericExpression.ml  Program.ml  Recursive.ml  Renaming.ml  Renaming.mli  Simplify.ml  Statement.ml  Type.ml  TypeArgument.ml  TypeQuantifier.ml  UnaryOperator.ml  Value.ml
nanosail/ConfigLib/: BuildContext.ml  Setting.ml  Setting.mli
nanosail/Document/: Document.ml  Functor.ml  HelperFunctions.ml
nanosail/ExtBase/: ExtBase.ml  Fn.ml  List.ml  Map.ml  Sequence.ml  String.ml  Tuple.ml
nanosail/LogLib/: LogLib.ml  VerbosityLevel.ml  VerbosityLevel.mli
nanosail/LoggingLib/: LoggingLib.ml
nanosail/Map/: Identifier.ml  Integer.ml  Map.ml  String.ml
nanosail/NanosailToMicrosail/: AnnotationContext.ml  AnnotationContext.mli  AnnotationMonad.mli  BaseModule.ml  BaseModule.mli  Basics.ml  Coq.ml  CoqGenerationContext.ml  EqDec.ml  Expressions.ml  Finite.ml  ForeignKit.ml  FunDeclKit.ml  FunDeclKit.mli  FunDefKit.ml  FunctionCalls.ml  GenerationContext.ml  GenerationContext.mli  Identifier.ml  Ignored.ml  Katamaran.ml  Katamaran.mli  Kind.ml  MuSail.ml  NanosailToMicrosail.ml  Nanotype.ml  NoConfusion.ml  Numeric.ml  PP.ml  PPSail.ml  Prelude.ml  ProgramModule.ml  Registers.ml  Registers.mli  Sail.ml  Statements.ml  TranslationSettings.ml  Type.ml  TypeQuantifier.ml  Types.ml  (+12 more)
nanosail/NanosailToMicrosail/ProgramModule/: ForeignKit.ml  ForeignKit.mli  FunDefKit.ml  FunDefKit.mli  ProgramModule.ml  ProgramModule.mli
nanosail/NanosailToMicrosail/Types/: Enums.ml  ExtendedType.ml  Records.ml  TypeAbbreviations.ml  Types.ml  Variants.ml
nanosail/SailToNanosail/: Exception.ml  Expression.ml  Function.ml  Identifier.ml  Monomorphization.ml  Numeric.ml  Prelude.ml  Prelude.mli  Register.ml  SailToNanosail.ml  Sanitation.ml  StringOf.ml  TopLevelTypeConstraint.ml  Translation.ml  TranslationContext.ml  TranslationContext.mli  TypeDefinition.ml  ValueDefinition.ml  Variant.ml
nanosail/SailToNanosail/Translate/: Enum.ml  ExtendedType.ml  Function.ml  Function.mli  Identifier.ml  Literal.ml  Match.ml  Nanotype.ml  Numeric.ml  Record.ml  Recursive.ml  Register.ml  TopLevelTypeConstraint.ml  Translate.ml  TypeAbbreviation.ml  TypeDefinition.ml  TypeQuantifier.ml  ValueDefinition.ml  Variant.ml
nanosail/SailToNanosail/Translate/Rewrites/: BitvectorComparisons.ml  Rewrites.ml
nanosail/Slang/: Address.ml  Converters.ml  Converters.mli  Destructuring.ml  Environment.ml  EnvironmentBuilder.ml  Evaluation.ml  EvaluationContext.ml  Functions.ml  Heap.ml  Location.ml  Parser.ml  Parsing.ml  Recursive.ml  Slang.ml  State.ml  Token.ml  Tokenizing.ml
nanosail/Slang/Prelude/: Advanced.ml  Arithmetic.ml  Booleans.ml  Comparison.ml  ControlFlow.ml  Define.ml  HeapFunctionality.ml  IO.ml  Lambda.ml  Lists.ml  Macros.ml  Predicates.ml  Prelude.ml  Quote.ml  Shared.ml  Strings.ml
nanosail/StringOf/: Nanosail.ml  OCaml.ml  Sail.ml  SailToString.ml  StringOf.ml
nanosail/Templates/: Blocks.ml  Blocks.mli  Prelude.ml  Templates.ml
nanosail/ast/: ast.ml
nanosail/auxlib/: auxlib.ml
nanosail/auxlib/monads/: monads.ml  monoid.ml  sig.ml  state.ml  util.ml  writer.ml
sail_plugin/: Options.ml  Rewrites.ml  Sail_plugin.ml  dune  sail_plugin_katamaran.ml
test/nanosail_to_microsail/: dune  expr_test.expected  expr_test.ml  lists_notations_test.expected  lists_notations_test.ml  lists_test.expected  lists_test.ml  long_notations_test.expected  long_notations_test.ml  long_test.expected  long_test.ml  main.ml  prod_test.expected  prod_test.ml
test/nanosail_to_microsail/examples/: examples.ml  examples.mli  expr.ml  lists.ml  long.ml  prod.ml
tests/nanosail-tests/: BlockTests.ml  ConversionTests.ml  ConvertBitsToZTests.ml  ExtendedIntegerTests.ml  ListTests.ml  NanosailTests.ml  NormalizationTests.ml  NumericExpressionPrettyPrintingTests.ml  PatternTests.ml  PrecedenceFormatterTests.ml  PrecedenceTests.ml  RenamingTests.ml  SequenceTests.ml  Shared.ml  SimplificationTests.ml  SubstituteVariableTests.ml  SubstitutionTests.ml  TuplePatternMatchingTests.ml  conversion_tests.ml  dune  nanosail_tests.ml  precedence_tests.ml  writer_monad_tests.ml
tests/nanosail-tests/PatternMatchingTests/: PatternMatchingShared.ml  PatternMatchingTests.ml  Shared.ml
tests/nanosail-tests/PatternMatchingTests.ml/: PatternMatchingTests.ml  Shared.ml
tests/nanosail-tests/PatternMatchingTests.ml/AdornTests/: AdornTests.ml  Enum.ml
tests/nanosail-tests/PatternMatchingTests.ml/BuildTreeTests/: BuildTreeTests.ml  Enum.ml
tests/nanosail-tests/SlangTests/: AdvancedTests.ml  EvaluationTests.ml  HeapTests.ml  ListMonadNotations.ml  ParserTests.ml  SlangShared.ml  SlangTests.ml  StringTests.ml  TokenizerTests.ml
tests/nanosail-tests/TuplePatternMatchingTests/: Normalize.ml  Shared.ml  TuplePatternMatchingTests.ml
(+908 files in other folders)
