(include_subdirs qualified)

(env
 (dev
  (flags (:standard -w -30))))  ;; Turns off warning about duplicate record names in recursive types

(library
 (name nanosail)
 (public_name nanosail)
 (preprocess (pps ppx_here))
 (libraries base
            stdio
            libsail
            pprint
            monads
            auxlib
            slang
            ConfigLib))
