(include_subdirs qualified)

(env
 (dev
  (flags (:standard -w -30                ;; Turns off warning about duplicate record names in recursive types
                    -warn-error -A))))    ;; Turn off fatal warnings

(library
 (name nanosail)
 (public_name nanosail)
 (preprocess (pps ppx_here))
 (libraries base
            stdio
            libsail
            pprint
            monads))
