(env
  (dev
    (flags (:standard -warn-error -A))))

(executable
  (name sail_plugin_katamaran)
  (modes
    (native plugin))
  (libraries libsail nanosail auxlib monads)
  (embed_in_plugin_libraries auxlib monads nanosail)  ; IMPORTANT: the order in which these libraries are mentioned matters
  )

(install
  (section
    (site
      (libsail plugins)))
  (package sail_katamaran_backend)
  (files sail_plugin_katamaran.cmxs))
