(env
  (dev
    (flags (:standard -warn-error -A))))

(executable
  (name sail_plugin_katamaran)
  (modes
    (native plugin))
  (libraries libsail nanosail)
  (embed_in_plugin_libraries            ; IMPORTANT: the order in which these libraries are mentioned matters
        sexplib0
        base.base_internalhash_types
        base.shadow_stdlib
        base
        stdio
        auxlib
        monads
        slang
        ConfigLib
        nanosail))

(install
  (section
    (site
      (libsail plugins)))
  (package sail_katamaran_backend)
  (files sail_plugin_katamaran.cmxs))
