(executable
 (name main)
 (modules main)
 (libraries nanosail examples))

(tests
 (names
  lists_test lists_notations_test
  long_test long_notations_test
  prod_test
  expr_test)
 (modules
  lists_test lists_notations_test
  long_test long_notations_test
  prod_test
  expr_test)
 (libraries nanosail examples))
