(include_subdirs qualified)

(env
 (dev
  (flags (:standard -w -30                ;; Turns off warning about duplicate record names in recursive types
                    -warn-error -A))))    ;; Turn off fatal warnings

(test
 (preprocess (pps ppx_here))
 (libraries base ounit2 nanosail)
 (name nanosail_tests))
